[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["ownweight1 <kanamorishuhei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^1.8.0"
requests = "^2.22.0"
flake8 = "^3.7.9"
autopep8 = "^1.5"
boto3 = "^1.16.30"
pytest = "^5.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
